  * debian/patches/dfg-jit.patch,
    debian/patches/install-minibrowser.patch,
    debian/patches/restore_sparc_code.patch:
    + Refresh.
  * debian/patches/atomic_build_fix.patch:
    + Add -latomic to fix build in some architectures.
  * debian/rules:
    + Disable JIT completely in mips and mipsel, it does not build at the
      moment, see https://bugs.webkit.org/show_bug.cgi?id=136753.

 -- Alberto Garcia <berto@igalia.com>  Wed, 24 Sep 2014 23:59:09 +0300

webkit2gtk (2.5.3+dfsg1-1) experimental; urgency=medium

  * New upstream release from the upcoming 2.6 branch.
    + Rename source package to webkit2gtk, since now WebKitGTK+ only
      provides the new WebKit2 API. We have to keep the old webkitgtk
      packages around until all apps using the old API have ben ported.
    + Add the +dfsg1 suffix to the version number since we have to remove
      a few non-free files from the source tarball.
  * debian/gbp.conf:
    + Update upstream branch name.
  * debian/watch:
    + Add dversionmangle rule to strip +dfsg1 from the package.
  * debian/rules:
    + Rewrite completely using the debhelper sequencer and build with
      cmake instead of autotools.
    + Disable JIT and MacroAssembler in all architectures unless we know
      it works.
    + Add get-orig-source target.
  * debian/control:
    + Remove all packages that use the old WebKit API, as well as the
      -common packages.
    + libjavascriptcoregtk-3.0-0 => libjavascriptcoregtk-4.0-18.
    + libwebkit2gtk-3.0-25 => libwebkit2gtk-4.0-37.
    + Don't depend on any specific compiler.
    + Add build dependencies on cmake and slimit.
    + Replace libgeoclue-dev with geoclue-2.0.
    + Split libwebkit2gtk-4.0-doc from the -dev package.
    + Remove Mike Hommey from the Uploaders field.
  * debian/copyright:
    + Make it compliant with the copyright format v1.0 and refactor the
      licenses a bit.
  * debian/jquery-1.9.1.js: