@@ -13,6 +13,7 @@ webkit2gtk (2.6.0+dfsg1-1) UNRELEASED; urgency=medium
   * debian/rules:
     + Disable JIT completely in mips and mipsel, it does not build at the
       moment, see https://bugs.webkit.org/show_bug.cgi?id=136753.
+    + Enable JIT in armel and armhf.
 
  -- Alberto Garcia <berto@igalia.com>  Wed, 24 Sep 2014 23:59:09 +0300
 
